# codex

codex-rs/: Cargo.toml
codex-rs/app-server-sdk/: BUILD.bazel  Cargo.toml  README.md
codex-rs/app-server-sdk/examples/: direct.rs
codex-rs/app-server-sdk/src/: lib.rs
codex-rs/app-server-sdk/tests/: smoke.rs
codex-rs/app-server/src/: bespoke_event_handling.rs  codex_message_processor.rs  in_process.rs  lib.rs  message_processor.rs
codex-rs/core/src/: codex.rs  thread_manager.rs
codex-rs/core/src/tools/: spec.rs
codex-rs/exec/src/: event_processor_with_human_output.rs
codex-rs/protocol/src/: protocol.rs
codex-rs/tui/src/: chatwidget.rs
codex-rs/windows-sandbox-rs/: build.rs
